[gd_scene load_steps=3 format=3 uid="uid://do3t2cp20fcgl"]

[ext_resource type="Script" uid="uid://drfw84gej76j7" path="res://login/register.gd" id="1_x5wc1"]
[ext_resource type="Texture2D" uid="uid://ci5s24q1vqwke" path="res://assets/fonds/Fondo.png" id="2_ax3i6"]

[node name="RegisterScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1607.0
offset_bottom = 885.0
script = ExtResource("1_x5wc1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1608.0
offset_bottom = 888.0

[node name="Fondo" type="Sprite2D" parent="Panel"]
show_behind_parent = true
position = Vector2(806, 445)
scale = Vector2(1.04557, 0.869141)
texture = ExtResource("2_ax3i6")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 510.0
offset_top = 325.0
offset_right = 625.0
offset_bottom = 374.0
text = "Nuevo Usuario
"

[node name="username_line" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 508.0
offset_top = 427.0
offset_right = 631.0
offset_bottom = 458.0

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 521.0
offset_top = 517.0
offset_right = 615.0
offset_bottom = 566.0
text = "Contraseña:
"

[node name="password_line" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 509.0
offset_top = 587.0
offset_right = 636.0
offset_bottom = 618.0
secret = true

[node name="Label3" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 787.0
offset_top = 521.0
offset_right = 962.0
offset_bottom = 544.0
text = "Confirmar contraseña:"

[node name="confirm_line" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 781.0
offset_top = 588.0
offset_right = 978.0
offset_bottom = 619.0
secret = true

[node name="register_button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 377.0
offset_top = 734.0
offset_right = 547.0
offset_bottom = 765.0
text = "Crear Nuevo Usuario"

[node name="back_button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 1004.0
offset_top = 746.0
offset_right = 1125.0
offset_bottom = 777.0
text = "Volver al inicio
"

[node name="error_label" type="Label" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 780.0
offset_top = 329.0
offset_right = 997.0
offset_bottom = 430.0
theme_override_font_sizes/font_size = 25
